update_user_handler_added
